# system_agent

./: .clang-format  .codechecker-skip.txt  .gitignore  .gitmodules  CMakeLists.txt  README.md  aarch64-buildroot.cmake  arm-buildroot.cmake
.github/workflows/: build-native.yaml  cppcheck.yaml
cmake/: cortex-a53-clang.cmake  cortex-a53.cmake  cortex-a7.cmake  cortex-a72-clang.cmake
include/: lv_conf.h  user_common.h
include/drivers/: user_config_driver.h  user_gpio_driver.h  user_spi_driver.h
include/impl/: user_bme280_impl.h  user_ccs811_impl.h  user_lvgl_impl.h  user_mqtt_impl.h  user_st7789_impl.h  user_stick_impl.h
include/tasks/: user_task_lvgl_common.h  user_task_mqtt_common.h  user_tasks.h
include/utils/: user_log_util.h  user_system_util.h
lib/: CMakeLists.txt
lib/bme280_dht/: bme280_dht.c  bme280_dht.h
lib/ccs811_tvoc/: ccs811_tvoc.c  ccs811_tvoc.h
lib/mqtt_influx/: mqtt_influx.c  mqtt_influx.h
misc/: agent_config.cfg.example  agent_config.cfg.pine64  agent_config.cfg.rpi4
src/: main.c
src/assets/: OFL.encode_sans.txt  encode_sans_sc_bold_48.c  encode_sans_sc_light_24.c  encode_sans_sc_regular_32.c  encode_sans_sc_regular_64.c
src/drivers/: user_config_driver.c  user_gpio_driver.c  user_spi_driver.c
src/impl/: user_bme280_impl.c  user_ccs811_impl.c  user_lvgl_impl.c  user_mqtt_impl.c  user_st7789_impl.c  user_stick_impl.c
src/tasks/: user_base_task.c  user_clock_task.c  user_dht_task.c  user_lvgl_task.c  user_mqtt_task.c  user_tvoc_task.c
src/utils/: user_log_util.c  user_system_util.c
